--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -39,6 +39,15 @@ ul {
 
 .links {
     display: inline-block;
+    > a {
+        color: #636b6f;
+        padding: 0 25px;
+        font-size: 13px;
+        font-weight: 600;
+        letter-spacing: .1rem;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
 }
 
 .title {
@@ -52,16 +61,6 @@ ul {
     width: 100%;
     background: #fff;
     padding: 18px 10px;
-}
-
-.links > a {
-    color: #636b6f;
-    padding: 0 25px;
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: .1rem;
-    text-decoration: none;
-    text-transform: uppercase;
 }
 
 .m-b-md {
