--- a/resources/sass/login.scss
+++ b/resources/sass/login.scss
@@ -22,7 +22,7 @@
     -webkit-box-flex: 1;
     -ms-flex: 1 1 auto;
     flex: 1 1 auto;
-}
-.card-body label {
-    text-align: right;
+    label {
+        text-align: right;
+    }
 }
